== Thu Nov  5 04:45:31 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* 2acb70a: Closes Issue #1 - Handling badly formatted content-type fields <mikel>

== Wed Nov  4 23:24:32 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* 2b5d608: Closes Issue #2 - Empty header field values not parsing <mikel>
* Version bumb to 1.2.1

== Wed Nov  4 12:54:43 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Renamed Mail::Message.encode! to Mail::Message.ready_to_send!, deprecated :encode! <mikel>
* Rewrote encoding and decoding methods on all classes.  Adds a lot of boiler plate code, but allows us to
  be really precise in each field type that needs custom encoding.  Now all encoding is done by the field_type
  itself.  Need to follow through on the body. <mikel>
* Bump version to 1.2.0 due to changes of :encoded, :decoded behaviour <mikel>

== Tue Nov  3 00:59:45 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Tested mail against entire Enron set (2.3gb) and the Trec 2005 set (0.5gb), ~ half a million emails without crashing <jlindley>
* Some headers only can appear once, enforce during header parse assignment. <jlindley>
* Convert empty bodies into empty arrays instead of nil. <jlindley>
* Handle blank content dispositions. <jlindley>
* Mention Trec 2005 Spam Corpus in readme <jlindley>
* Add 'rake corpus:verify_all' to allow parse checks in bulk. <jlindley>
* Added handling of multi value parameters, like filename*1*="us-ascii'en'blah" filename*2="bleh" <mikel>
* Added dependency on ActiveSupport 2.3 or higher <mikel>

== Sun Nov  1 12:00:00 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* handle OpenSSL::SSL::VERIFY_NONE returning 0 <jlindley>
* doing Mail.new { content_type [text, plain, { charset => UTF-8 }] } is now 
  possible (content type accepts an array) <mikel>

== Sat Oct 31 11:00:41 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Fixed attachment handling, so mail can find attachment from a content-type,
content-disposition or content-location