@@ -13,7 +13,6 @@ describe "Round Tripping" do
     parsed_mail.body.to_s.should == "This is Text"
   end
 
-
   it "should round trip a html multipart email" do
     mail = Mail.new('Subject: FooBar')
     mail.text_part = Mail::Part.new do
@@ -31,5 +30,17 @@ describe "Round Tripping" do
     parsed_mail.parts[1].body.to_s.should == "<b>This is HTML</b>"
   end
 
+  it "should round trip an email" do
+    initial = Mail.new do
+      to        "mikel@test.lindsaar.net"
+      subject   "testing round tripping"
+      body      "Really testing round tripping."
+      from      "system@test.lindsaar.net"
+      cc        "nobody@test.lindsaar.net"
+      bcc       "bob@test.lindsaar.net"
+      date      Time.local(2009, 11, 6)
+    end
+    Mail.new(initial.encoded).encoded.should == initial.encoded
+  end
 
 end
